Various layout issues

--- a/WebPart/Projects/styles.css
+++ b/WebPart/Projects/styles.css
@@ -72,7 +72,9 @@ a:hover {
 
 .gvMnuHeader {
     background:#842829;
-    border: solid 1px #355379;
+    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.1, #B45859), color-stop(0.66, #842829), color-stop(0.80, #943839), color-stop(0.92, #E48889));
+    background-image: -moz-linear-gradient(center bottom, #B45859 10%, #842829 66%, #943839 80%, #E48889 92%);
+    border: solid 2px #842829;
     text-align:center;
 }
 
@@ -92,12 +94,14 @@ a:hover {
 .FormTitle {
     text-align: center;
     background-color:#842829;
+    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.1, #B45859), color-stop(0.66, #842829), color-stop(0.80, #943839), color-stop(0.92, #F49899));
+    background-image: -moz-linear-gradient(center bottom, #B45859 10%, #842829 66%, #943839 80%, #F49899 92%);
 	padding: 5px 0px 5px 0px;
 	font-size:large;
 	font-weight:bolder;
-    border-radius: 5px;
-	-moz-border-radius: 10px;
-	-webkit-border-radius: 10px;
+    border-radius: 15px;
+	-moz-border-radius: 15px;
+	-webkit-border-radius: 15px;
 	box-shadow: 5px 5px 5px #000000;
     -moz-box-shadow: 5px 5px 5px #000000;
     -webkit-box-shadow: 5px 5px 5px #000000;
@@ -152,8 +156,9 @@ a:hover {
 
 .MenuItemSelected {
     background-color: Transparent;
-    border-left: solid 2px black;
-    border-top: solid 2px black;
+    border-left: solid 2px #999999;
+    border-top: solid 2px #999999;
+    border-bottom: solid 2px #999999;
 }
 
 .MenuItemSelected a {
@@ -314,7 +319,7 @@ a:hover {
 
 #tblCngPass {
     /*background-color: #E4E4C0;*/
-    width:350px;
+    width:470px;
     border-top: solid 3px #CCCCCC;
     border-left: solid 3px #CCCCCC;
     border-right: solid 3px #999999;
@@ -469,10 +474,6 @@ a:hover {
     background-image:-moz-linear-gradient(right center, #456389, #943839);
 }
 
-#advlink {
-    -webkit-box-reflect: below 5px -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(255, 255, 255, 0.25)));
-}
-
 .MaxWidth80px{
     max-width: 80px;
 }
@@ -523,4 +524,36 @@ a:hover {
 #LoginSecondTable input[type=text] {
     background-color: White;
     border: groove 3px #CCCCCC;
+}
+
+#tdBottomLogo {
+    text-align:right; 
+    vertical-align:top;
+    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.1, #ADB9C8), color-stop(0.66, #355379), color-stop(0.83, #95A5B8), color-stop(0.95, #EEF0F3));
+    background-image: -moz-linear-gradient(center bottom, #ADB9C8 10%, #355379 66%, #95A5B8 83%, #EEF0F3 95%);
+    border-radius: 8px;
+	-moz-border-radius: 8px;
+	-webkit-border-radius: 8px;
+	padding-right: 5px;
+    /*border: solid 1px black;*/
+    box-shadow: 1px 1px 1px #000000;
+    -webkit-box-shadow: 1px 1px 1px #000000;
+    -moz-box-shadow: 1px 1px 1px #000000;
+}
+
+#tdBottomLogo div {
+    -webkit-box-reflect: below 5px -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(255, 255, 255, 0.25)));
+}
+
+#tdBottomLogo a {
+    font-weight: bold;
+    text-decoration: none;
+}
+
+#tdLogoff {
+    width:100%; 
+    text-align: right; 
+    vertical-align: bottom; 
+    background-color: White;
+    /*background-image: -webkit-gradient(linear, left bottom, right bottom, color-stop(0.1, white), color-stop(0.9, #355379), color-stop(0.9, transparent));*/
 }
